--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>测试</title>
+    <title>画一个皮卡丘送给你</title>
   </head>
 
   <body>
@@ -18,7 +19,10 @@
       <button id="btnNormal">中速</button>
       <button id="btnFast">快速</button>
     </div>
-    <style>* {
+    <style>
+      * {
+        padding: 0;
+        margin: 0;
         box-sizing: border-box;
       }
 
@@ -54,6 +58,7 @@
         left: 0;
         width: 100%;
         overflow-y: auto;
+        background-color: white;
       }
 
       #demo::-webkit-scrollbar {
@@ -66,7 +71,8 @@
         left: 0;
         width: 100%;
         height: 50vh;
-      }</style>
+      }
+    </style>
     <div id="html">
       <div id="skin">
         <div id="eye" class="left"></div>
@@ -91,7 +97,7 @@
         </div>
       </div>
     </div>
-    <script src="/main.1f19ae8e.js"></script>
+    <script src="main.js"></script>
   </body>
 
 </html>
